--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 __pycache__
 results
 datasets
+/aligned_images*
+/raw_images*
+/generated_images*
+/latent_representations*
+/videos*
+/cache*
+*.pkl
+/*.png
